--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/damola.jpeg" width="100" height="200" alt="Oyindamola's Profile Picture"></td>
+            <td><img src="damola.jpeg" width="100" height="200" alt="Oyindamola's Profile Picture"></td>
             <td><h1>Oyindamola Abolaji</h1>
     <p><em>Founder and CEO of <strong>❤❤❤Oyin's Fashion World❤❤❤</strong></em></p>
     <p>I am a FrontEnd Engineer and I am a Fashion Enthusiast.</p></td>
